force-app/main/default/objects/RollupConfigs__c/RollupConfigs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RollupConfigs</label>
</CustomObject>