force-app/main/default/objects/RollupConfigs__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>On/Off toggle for this particular configuration</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>