force-app/main/default/objects/RollupConfigs__c/fields/Additional_Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter_Clause__c</fullName>
    <inlineHelpText>Add an optional filter clause to the rollup, without quotes or punctuation. Example: AND IsActive = true</inlineHelpText>
    <label>Additional Filter Clause</label>
    <type>TextArea</type>
</CustomField>