force-app/main/default/objects/RollupConfigs__c/fields/Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Name__c</fullName>
    <description>Stores the API name of the child object which contains fields to be rolled up by the Parent</description>
    <inlineHelpText>Stores the API name of the child object which contains fields to be rolled up by the Parent</inlineHelpText>
    <label>Child Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>