force-app/main/default/objects/RollupConfigs__c/fields/Config_Notes__c.field-meta.xml
<CustomField>
    <fullName>Config_Notes__c</fullName>
    <inlineHelpText>Optional notes about this configuration (special modifications to the trigger, explanations, etc)</inlineHelpText>
    <label>Config Notes</label>
    <type>TextArea</type>
</CustomField>