force-app/main/default/objects/RollupConfigs__c/fields/Date_Math_Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Math_Query_Type__c</fullName>
    <inlineHelpText>For aggregating queries - stores value of MAX/MIN/AVG</inlineHelpText>
    <label>Date/Math Query Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>