force-app/main/default/objects/RollupConfigs__c/fields/Do_Date_Query__c.field-meta.xml
<CustomField>
    <fullName>Do_Date_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked will perform an aggregate DATE query for all configured rollups (ex: MAX(CloseDate)). Use a separate rollup configuration for &quot;normal&quot; rollups.</inlineHelpText>
    <label>Do Date Query</label>
    <type>Checkbox</type>
</CustomField>