force-app/main/default/objects/RollupConfigs__c/fields/Do_Math_Query__c.field-meta.xml
<CustomField>
    <fullName>Do_Math_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked will perform an aggregate NUMERIC query for all configured rollups (ex: MAX(Amount)). Use a separate rollup configuration for &quot;normal&quot; rollups.</inlineHelpText>
    <label>Do Math Query</label>
    <type>Checkbox</type>
</CustomField>