force-app/main/default/objects/RollupConfigs__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</description>
    <inlineHelpText>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>