force-app/main/default/objects/RollupConfigs__c/fields/parentQueryField1__c.field-meta.xml
<CustomField>
    <fullName>parentQueryField1__c</fullName>
    <description>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</description>
    <inlineHelpText>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</inlineHelpText>
    <label>parentQueryField1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>