force-app/main/default/objects/RollupConfigs__c/fields/parentRowCount__c.field-meta.xml
<CustomField>
    <fullName>parentRowCount__c</fullName>
    <description>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</description>
    <inlineHelpText>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</inlineHelpText>
    <label>parentRowCount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>