force-app/main/default/objects/RollupConfigs__c/fields/queryField3__c.field-meta.xml
<CustomField>
    <fullName>queryField3__c</fullName>
    <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
    <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
    <label>queryField3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>