force-app/main/default/objects/RollupConfigs__c/fields/queryField_parentRelationshipName__c.field-meta.xml
<CustomField>
    <fullName>queryField_parentRelationshipName__c</fullName>
    <description>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</description>
    <inlineHelpText>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</inlineHelpText>
    <label>queryField_parentRelationshipName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>