force-app/main/default/objects/RollupConfigs__c/fields/Use_Queueable__c.field-meta.xml
<CustomField>
    <fullName>Use_Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, rollup helper will execute as asynchronous and queueable. This will help with large data volumes, but may take several seconds (or even minutes) for results to appear in Salesforce.</inlineHelpText>
    <label>Use Queueable</label>
    <type>Checkbox</type>
</CustomField>